--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"hoi4ModUtilities.modFile": "d:\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\Toto\\descriptor.mod"
+	"hoi4ModUtilities.modFile": "c:\\Users\\dtagg\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\Toto\\descriptor.mod"
 }
